	  (2014-2-9).
	* drivers/usbhost/usbhost_hidmouse.c and other files:  Add support
	  for a HID boot mouse device.  It compiles but is otherwise
	  completely untested on initial check-in (2014-2-9).
	* configs/olimex-lpc1766stk/src/lpc17_hidmouse.c and hidmouse: Add
	  support of a test of the USB HID mouse (2014-2-9).
	* drivers/usbhost/usbhost_hidmouse.c: The driver appears to be
	  functional.  But there are usability issues:  How do you use the
	  mouse with no cursor?  The HID mouse currently emulates a touchscreen
	  driver.  That would work in the long run for several reasons (see the
	  top-level TODO list for details) (2014-2-9).
	* include/nuttx/input/mouse.h and drivers/usbhost/usbhost_hidmouse.c:
	  Defined a mouse interface that is very similar to a touchscreen
	  interface, but allows reporting of all mouse buttons.  Also, unlike
	  touchscreen drivers, mouse drivers need to report positional data
	  with no button is pressed so that the mouse position can drive a
	  cursor (2014-2-10).
	* drivers/usbhost/usbhost_hidmouse.c, include/nuttx/input/mouse.h, and
	  include/nuttx/usb/hid.h:  Add support for a mouse wheel (2014-2-10).
	* drivers/lcd/mio283qt9a.c and include/nuttx/lcd/mio283qt9a.h:  Support
	  for the MIO283QT9A LCD.  From Toby Duckworth (2014-2-10).
	* configs/mikroe-stm32f4/src/up_mio283qt9a.c: The Mikroe STM32F4 can
	  now support the newer MIO283QT9A LCD. From Toby Duckworth (2014-2-10).
	* MANY files changes based on complaints from the tool CppCheck.  Several
	  latent bugs were fixed (and most likely some new typos were introduced)
	  (2014-2-10).
	* arch/arm/include/samd and src/samd:  Basic framework to support Atmel
	  SAMD20 Cortex-M0+ chips.  Initial check-in is incomplete; this is a
	  work in progress (2014-2-12).
	* configs/samd20-xplained:  Framework to support the Amtel SAMD20
	  Xplained Pro.  Initial check is just an unverified, rough port of
	  the SAM4L Xplained Pro configuration (2014-2-12).
